# gcboard

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  TODO  config.h.in  configure  configure.ac  gcb_common.c  gcb_common.h  gcboard.xcf.bz2  gtkcboard-marshal.c  gtkcboard-marshal.h  gtkcboard-marshal.list  gtkcboard-marshal.lo  gtkcboard.c  gtkcboard.h  gtktest.c  libtool  whale.xpm  xpm_images.inc
homepage/: about.html  about.tex  about.txt  about.txt~  applications.html  applications.txt  applications.txt~  documentation.html  documentation.txt  documentation.txt~  download.html  download.txt  download.txt~  features.html  features.txt  features.txt~  fetch_info.rb  files  homepage.tgz  screenshots.html  screenshots.txt  screenshots.txt~  setup.rb  setup.rb~
homepage/htdocs/: news.html  project.html
homepage/html/: about.html  applications.html  doctest.html  documentation.html  download.html  features.html  gcboard.css  screenshots.html  test.html
ruby/: .dist-files  .rbgtkcboard.c.swp  Gtk%3A%3ACBoard  GtkCBoard.html  Makefile  README  dist-files  extconf.rb  rbgtkcboard.c
ruby/demo/: README  shogi.rb
ruby/demo/pieces/: Bishop_B.xpm  Bishop_W.xpm  Gold_B.xpm  Gold_W.xpm  King_B.xpm  King_W.xpm  Knight_B.xpm  Knight_W.xpm  Lance_B.xpm  Lance_W.xpm  P_Bishop_B.xpm  P_Bishop_W.xpm  P_Gold_B.xpm  P_Gold_W.xpm  P_Knight_B.xpm  P_Knight_W.xpm  P_Lance_B.xpm  P_Lance_W.xpm  P_Pawn_B.xpm  P_Pawn_W.xpm  P_Rook_B.xpm  P_Rook_W.xpm  P_Silver_B.xpm  P_Silver_W.xpm  Pawn_B.xpm  Pawn_W.xpm  Rook_B.xpm  Rook_W.xpm  Silver_B.xpm  Silver_W.xpm  background.xpm  highlight.xpm  num_0.xpm  num_1.xpm  num_2.xpm  num_3.xpm  num_4.xpm  num_5.xpm  num_6.xpm  num_7.xpm  (+2 more)
ruby/demo/pieces/.xvpics/: highlight.xpm  num_0.xpm  num_1.xpm  num_2.xpm  num_3.xpm  num_4.xpm  num_5.xpm  num_6.xpm  num_7.xpm  num_8.xpm  num_9.xpm  shogiboard.xpm
ruby/doc/: created.rid  fr_class_index.html  fr_file_index.html  fr_method_index.html  index.html
ruby/doc/files/: rbgtkcboard_c.html
ruby/lib/: gtkcboard.rb
